# game_engine_glfw

./: CMakeLists.txt  LICENSE  README.md
doc/html/: annotated.html  annotated_dup.js  class_default_scene-members.html  class_default_scene.html  class_default_scene.js  class_game_time-members.html  class_game_time.html  class_game_time.js  class_material.html  class_mesh.html  class_node_component-members.html  class_node_component.html  class_node_component.js  class_render_command-members.html  class_render_command.html  class_render_command.js  class_render_device-members.html  class_render_device.html  class_render_device.js  class_scene-members.html  class_scene.html  class_scene.js  class_scene_node-members.html  class_scene_node.html  class_scene_node.js  class_texture.html  classes.html  dir_1be4885ae0f8fc825ada64c048101ff4.html  dir_b91e5ddbf7cf322bac9ee9b76915bd81.html  dir_b91e5ddbf7cf322bac9ee9b76915bd81.js  dir_cff6504ebdd213a64976c6fc552b82ee.html  dir_cff6504ebdd213a64976c6fc552b82ee.js  dir_f63d65a128131ad5e82366e29eb95ffe.html  dir_f63d65a128131ad5e82366e29eb95ffe.js  files.html  functions.html  functions_func.html  gametime_8h_source.html  hierarchy.html  hierarchy.js  (+15 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_5.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_4.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js
doc/latex/: annotated.tex  class_default_scene.eps  class_default_scene.tex  class_game_time.tex  class_material.tex  class_mesh.tex  class_node_component.tex  class_render_command.tex  class_render_device.tex  class_scene.eps  class_scene.tex  class_scene_node.tex  class_texture.tex  dir_1be4885ae0f8fc825ada64c048101ff4.tex  dir_b91e5ddbf7cf322bac9ee9b76915bd81.tex  dir_cff6504ebdd213a64976c6fc552b82ee.tex  dir_f63d65a128131ad5e82366e29eb95ffe.tex  hierarchy.tex  refman.tex
extlibs/freeimage/x64/: FreeImage.lib
extlibs/glew/x64/lib/Debug/Win32/: glew32d.exp  glew32d.lib
extlibs/glew/x64/lib/Debug/x64/: glew32d.exp  glew32d.lib  glew32sd.lib
extlibs/glfw/linux/: libglfw.so.3.3
extlibs/glfw/x64/Debug/: glfw3.ilk  glfw3dll.exp  glfw3dll.lib
extlibs/glfw/x64/Release/: glfw3dll.exp  glfw3dll.lib
extlibs/libpng/x64/: libpng16.exp  libpng16.lib  libpng16_static.lib
extlibs/zlib/x64/: zlib.exp  zlib.lib
game/: CMakeLists.txt
game/assets/: car1.mtl  house.mtl  ship1.mtl  table1.mtl
game/shaders/: pshader.glsl  simpleps.glsl  simplevs.glsl  vshader.glsl
game/src/: component.h  gameobject.cpp  gameobject.h  glfw_test.cpp  lib_test_app.cpp  refl.h  scenegraph.h  stdafx.cpp  stdafx.h
gamelib/: CMakeLists.txt
gamelib/include/: display.h  filehelper.h  gametime.h  image.h  imageimport.h  material.h  mesh.h  nodecomponent.h  reflectionmacros.h  rendercommand.h  renderdevice.h  renderlib.h  renderlib_api.h  scene.h  scenenode.h  shader.h  targetver.h  texture.h
gamelib/src/: RenderLib.cpp  display.cpp  dllmain.cpp  filehelper.cpp  gametime.cpp  image.cpp  multiformatimgimp.cpp  nodecomponent.cpp  pngimporter.cpp  rendercommand.cpp  renderdevice.cpp  scene.cpp  scenenode.cpp  shader.cpp  stdafx.cpp
(+3 files in other folders)
